@@ -285,7 +285,12 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
                 fh.close()
             except IOError:
                 report = 'No latex error report available.'
-            if exit_status:
+            try:
+                os.stat(dvifile)
+                exists = True
+            except OSError:
+                exists = False
+            if exit_status or not exists:
                 raise RuntimeError(('LaTeX was not able to process the following \
 string:\n%s\nHere is the full report generated by LaTeX: \n\n'% repr(tex)) + report)
             else: mpl.verbose.report(report, 'debug')
